INT-8046: FF wrap bug fix

--- a/less/bootswatch/snap-core.less
+++ b/less/bootswatch/snap-core.less
@@ -979,7 +979,6 @@ input[type="text"]+input[type="submit"] {
     }
 
     .completionstatus {
-        white-space: nowrap;
         border-bottom: 0.5em solid @gray-lighter;
     }
     .completion-line {
