--- a/style/editor.css
+++ b/style/editor.css
@@ -4646,7 +4646,6 @@ input[type="text"] + input[type="submit"] {
   float: left;
 }
 .courseinfo .completionstatus {
-  white-space: nowrap;
   border-bottom: 0.5em solid #dadada;
 }
 .courseinfo .completion-line {
